# DeepLearning

./: .gitignore
python-pytorch/: pyproject.toml
python-pytorch/notes/: chapter10.ipynb  chapter6.ipynb  chapter8.ipynb
python-pytorch/src/python_pytorch/: __init__.py
rust-burn/: Cargo.toml  LLM_TRAINING.md
rust-burn/docs/: 1.Overview.md  2.WhyBurn.md  4.1.model.md  4.2.data.md  4.3.training.md  4.4.backend.md  4.5.inference.md  5.1.backend.md  5.2.tensor.md  5.3.autodiff.md  5.4.module.md  5.5.learner.md  5.6.metric.md  5.7.config.md  5.8.record.md  5.9.dataset.md  6.1.1.asynchronous-execution.md  6.1.2.kernel-fusion.md  6.1.3.kernel-selection.md  6.1.good-practices.md  6.2.quantization.md  7.custom-training-loop.md  8.saving-and-loading.md
rust-burn/src/: data.rs  inference.rs  llm.rs  llm_train.rs  main.rs  model.rs  rope.rs  training.rs
rust-candle/: Cargo.toml  data_processing_flow.md  test.safetensors
rust-candle/src/: chapter2.rs  chapter3.rs  main.rs  utils.rs
rust-candle/src/utils/: dataset.rs  file.rs  net.rs
tmp/guide/: config.json
tmp/guide/checkpoint/: model-2.mpk  model-3.mpk  optim-2.mpk  optim-3.mpk  scheduler-3.mpk
