[project]
name = "python-pytorch"
version = "0.1.0"
description = "Deep Learning with PyTorch"

requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "numpy>=2.3.5",
    "matplotlib>=3.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_pytorch"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
