[package]
name = "rust-burn-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Burn framework
burn = { version = "0.19.1", features = ["std", "wgpu", "train"] }
burn-core = "0.19.1"

# For data handling
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# For numerical operations
ndarray = "0.17.1"
rand = "0.9.2"

# For CLI and utilities
clap = { version = "4.5.53", features = ["derive"] }

# Development dependencies
[dev-dependencies]
burn-import = "0.19.1"

[features]
default = ["std"]
std = []
wgpu = ["burn/wgpu"]
