[package]
name = "rust-burn"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Burn framework
burn = { version = "0.19.1", features = [
    "std",
    "wgpu",
    "train",
    "vision",
    "tui",
    "fusion",
    "ndarray",
], default-features = false }
burn-core = "0.19.1"
burn-ndarray = "0.19.1"

# For data handling
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# For numerical operations
ndarray = "0.17.1"
rand = "0.9.2"

# For image processing
image = "0.25.9"

# For file operations
walkdir = "2.5.0"
tokenizers = "0.22.2"

# Development dependencies
[dev-dependencies]
burn-import = "0.19.1"

[features]
default = ["std"]
std = []
wgpu = ["burn/wgpu"]
