[package]
name = "rust-candle"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", features = [
    "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", features = [
    "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", features = [
    "metal",
] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokenizers = "0.22.2"
